--- a/app/src/main/res/xml/ein_ur_info.xml
+++ b/app/src/main/res/xml/ein_ur_info.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:minWidth="40dp" android:minHeight="40dp" android:updatePeriodMillis="86400000"
+    android:initialKeyguardLayout="@layout/ein_ur"
+    android:initialLayout="@layout/ein_ur"
+    android:minHeight="40dp"
+    android:minWidth="40dp"
     android:previewImage="@drawable/example_appwidget_preview"
-    android:initialLayout="@layout/ein_ur" android:resizeMode="horizontal|vertical"
-    android:widgetCategory="home_screen"
-    android:initialKeyguardLayout="@layout/ein_ur"></appwidget-provider>
+    android:resizeMode="horizontal|vertical"
+    android:updatePeriodMillis="1800000"
+    android:widgetCategory="home_screen|keyguard"></appwidget-provider>
