--- a/src/main/res/xml/eine_ur_info.xml
+++ b/src/main/res/xml/eine_ur_info.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:initialKeyguardLayout="@layout/ein_ur"
-    android:initialLayout="@layout/ein_ur"
+    android:initialKeyguardLayout="@layout/eine_ur"
+    android:initialLayout="@layout/eine_ur"
     android:minHeight="40dp"
     android:minWidth="40dp"
     android:previewImage="@drawable/example_appwidget_preview"
