--- a/src/main/res/xml/eine_ur_info.xml
+++ b/src/main/res/xml/eine_ur_info.xml
@@ -3,8 +3,7 @@
     android:initialKeyguardLayout="@layout/eine_ur"
     android:initialLayout="@layout/eine_ur"
     android:minHeight="40dp"
-    android:minWidth="40dp"
-    android:previewImage="@drawable/example_appwidget_preview"
+    android:minWidth="180dp"
     android:resizeMode="horizontal|vertical"
-    android:updatePeriodMillis="1800000"
+    android:updatePeriodMillis="900000"
     android:widgetCategory="home_screen|keyguard"></appwidget-provider>
