--- a/src/main/res/xml/eine_ur_info.xml
+++ b/src/main/res/xml/eine_ur_info.xml
@@ -4,6 +4,7 @@
     android:initialLayout="@layout/eine_ur"
     android:minHeight="40dp"
     android:minWidth="180dp"
+    android:previewImage="@drawable/zentuhr_pro_ori_portrait"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="900000"
     android:widgetCategory="home_screen|keyguard"></appwidget-provider>
