--- a/src/main/res/xml/prozent_widget_info.xml
+++ b/src/main/res/xml/prozent_widget_info.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:initialKeyguardLayout="@layout/eine_ur"
-    android:initialLayout="@layout/eine_ur"
+    android:initialKeyguardLayout="@layout/prozent_widget"
+    android:initialLayout="@layout/prozent_widget"
     android:minHeight="40dp"
     android:minWidth="180dp"
     android:previewImage="@drawable/zentuhr_pro_ori_portrait"
