--- a/src/main/res/layout/prozent_widget.xml
+++ b/src/main/res/layout/prozent_widget.xml
@@ -1,7 +1,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:padding="@dimen/widget_margin"
-    android:background="#343434">
+    android:background="#343434"
+    android:clickable="true"
+    android:id="@+id/widget_layout">
 
     <TextView android:id="@+id/appwidget_text" android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:layout_centerHorizontal="true"
